Made changes per review

--- a/Boston_Housing/boston_housing.ipynb
+++ b/Boston_Housing/boston_housing.ipynb
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "Since the model has a high R^2 score, I would say model successfully captured the target variables."
    ]
   },
   {
@@ -320,9 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Benifit is to train the model just right. If we use entire set for training then we will be over fitting. \n",
-    "If we use entire set for testing then we will not be training model at all and it will be generalized.\n",
-    "So to traing the model right and then measure the performance by testing gives us the chance to create best fiting model."
+    "Benifit is to train the model just right and then measure the performance of model.\n",
+    "If we use the entire dataset for training the model then we will not be left with any data to test our model's performance and check for overfitting."
    ]
   },
   {
@@ -390,6 +389,8 @@
     "As more training points are added the score falls. The score falls rapidly till 50 then it falls gradually, becoming almost flat after 350 points.\n",
     "\n",
     "Testing score incresases when more training points are added. The score increases rapidly till 50 then it increases marginally. It has a slight drop after 200 points which picks up after 300. After 350 it is almost constant.\n",
+    "\n",
+    "Having more training points is not going to benifit the model since both training and validation curves are almost constant.\n",
     "\n"
    ]
   },
@@ -438,9 +439,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Max depth of 1 : Model suffers from high bias. Visual cue of constant variance between training and validation score justifies my conclusion.\n",
+    "* Max depth of 1 : Model suffers from high bias. Visual cue of constant variance between training and validation score justifies my conclusion. We can also wee that the training and testing score are also low. \n",
     "\n",
-    "* Max depth of 10: Model suffers from high variance. Visual cue of increased variance between testing score and validation score justifiens my conclusion."
+    "* Max depth of 10: Model suffers from high variance. Visual cue of increased variance between testing score and validation score justifies my conclusion. We can also see that training score getting higher and testing score getting lower."
    ]
   },
   {
@@ -460,7 +461,7 @@
    "source": [
     "* Max. depth of 3 will give model that best generalizes unseen data. \n",
     "\n",
-    "* At max. depth 3 the variance between testing and validation scores is less also the validation score is almost the  high."
+    "* At max. depth 3 the variance between testing and validation scores is less also the validation score is almost the  highest."
    ]
   },
   {
@@ -490,6 +491,10 @@
    "source": [
     "*Grid search is an approach to parameter tuning that will methodically build and evaluate a model for each combination of algorithm parameters specified in a grid.\n",
     "\n",
+    "\n",
+    "Explanation: If we have less number of parameters it is easy for us to try out what is the best possible combination of the parameters that gives best performance of our model. As the number of parameters increases it becomes very difficult for us to try out all the permutations and combinations of the parameters and find out the best possible combination, this is what Grid Search automates for us.\n",
+    "\n",
+    "\n",
     "*It can find the best possible combination of algorithm parameters which can lead to best best optimized algorithm."
    ]
   },
@@ -512,9 +517,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*The k-fold cross-validation training technique is the process of dividing your data points into smaller number of k bins. Testing then occurs on one of the k bins while training occurs with the other k-1 bins. This process, testing and training, occurs k times across all bins for testing and training. \n",
+    "*The k-fold cross-validation training technique is the process of dividing your data points into smaller number of k bins. Testing then occurs on one of the k bins while training occurs with the other k-1 bins. This process, testing and training, occurs k times across all bins for testing and training. The k results from the folds can then be averaged (or otherwise combined) to produce a single estimation.\n",
     "\n",
     "*Grid search is the process to automate the parameter selection and tuning for best perfomance, When we use k-fold cross validation along with grid search, we consider a wider range of data points to find the tuned parameters thus increasing accuracy and performance of our model.\n",
+    "\n",
+    "The advantage of using more splits is that it matters less how the data gets divided. Every data point gets to be in a test set exactly once, and gets to be in a training set k-1 times. The variance of the resulting estimate is reduced as k is increased.\n",
     "\n"
    ]
   },
@@ -631,7 +638,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parameter 'max_depth' is 4 "
+    "* Parameter 'max_depth' is 4.\n",
+    "* The answer is close to what I had guessed for question 6, I was thinking answer for question 6 to be either 3 or 4.\n"
    ]
   },
   {
@@ -689,7 +697,16 @@
    "source": [
     "* Predicted selling price for Client 1's home: $411,096.00\n",
     "* Predicted selling price for Client 2's home: $219,961.54\n",
-    "* Predicted selling price for Client 3's home: $955,500.00"
+    "* Predicted selling price for Client 3's home: $955,500.00\n",
+    "\n",
+    "* The predicted prices seem reasonable to me:\n",
+    "\n",
+    "Client 1: Since it is a 5 bed room house with relatively low neighborhood poverty level and about intermediate student to teacher ratio the price of the house seems reasonable.\n",
+    "\n",
+    "Client 2: With high neighborhood poverty level and high student to teacher ratio the price of this house is\n",
+    "negatively impacted and is thus almost half of client 1.\n",
+    "\n",
+    "Client 3: With number of rooms 1.5 times more than client 1 and very low neighborhood poverty level and very good student to teacher ratio the price of this house seems justified.\n"
    ]
   },
   {
